[package]
name = "ashbrick"
version = "0.1.0"
authors = ["Alexander Wauck <waucka@ironstarconsulting.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[dependencies]
winit = "0.23"
ash = "0.33"
gpu-allocator = "0.10"
num = "0.3"
memoffset = "0.6"
cgmath = "0.17"
image = "0.23"
crevice = "0.8"
exr = "1.1"
egui = { version = "0.15.0", optional = true }
defaulted = { git = "https://git.wauckanet/waucka/defaulted.git", branch = "master" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["windef", "libloaderapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.24" }
